--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -8537,7 +8537,7 @@ textarea, select {
 
 .subPage {
     .header-title{
-        background: url(../images/header-bg.jpg) no-repeat center top;
+        background: url(../images/bg-trail.png) no-repeat center top;
         background-size: cover;
         background-attachment: fixed;
 
