--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -49,6 +49,13 @@ img{
   .content-align{
     text-align: justify!important;
   }
+
+  
+  
+  .my-shadow {
+    -webkit-filter: drop-shadow(0px 2px 2px rgba(255, 255, 255, 0.7));
+    filter: drop-shadow(0px 2px 2px rgba(250, 250, 250, 0.7));
+}
   
   
   
